--- a/vostro/.conkyrc
+++ b/vostro/.conkyrc
@@ -26,9 +26,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ]]
 
 conky.config = {
-    alignment = 'top_left',
+    alignment = 'top_right',
     background = false,
     border_width = 1,
+    color1 = 'c6396b',
+    color2 = 'fc8c3b',
+    color3 = 'f9e30f',
+    color4 = '4291e2',
+    color5 = '161925',
+    color6 = '3bf4bb',
     cpu_avg_samples = 2,
 	default_color = 'white',
     default_outline_color = 'white',
@@ -38,9 +44,9 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     use_xft = true,
-    font = 'DejaVu Sans Mono:size=12',
-    gap_x = 5,
-    gap_y = 60,
+    font = 'Noto:normal:size=9',
+    gap_x = 15,
+    gap_y = 40,
     minimum_height = 5,
 	minimum_width = 5,
     net_avg_samples = 2,
@@ -49,8 +55,13 @@ conky.config = {
     out_to_stderr = false,
     extra_newline = false,
     own_window = true,
+    own_window_argb_visual = true,
+    own_window_argb_value = 192,
     own_window_class = 'Conky',
-    own_window_type = 'desktop',
+    own_window_colour = '000000',
+    own_window_hints = 'undecorated,below,skip_taskbar,sticky,skip_pager',
+    own_window_transparent = false,
+    own_window_type = 'normal',
     stippled_borders = 0,
     update_interval = 1.0,
     uppercase = false,
