--- a/vostro/.conkyrc
+++ b/vostro/.conkyrc
@@ -98,6 +98,11 @@ ${goto 10}${color1}${top name 2}${alignr 10}${color}${top cpu 2}%
 ${goto 10}${color1}${top name 3}${alignr 10}${color}${top cpu 3}%
 ${goto 10}${color1}${top name 4}${alignr 10}${color}${top cpu 4}%
 ${goto 10}${color1}${top name 5}${alignr 10}${color}${top cpu 5}%
+#
+### Graphic ###
+${color4}${hr}${color}
+${alignc}${color}GPU: ${color6}Intel UHD Graphics 620
+${goto 10}${color}Pwr: ${color6}${execi 10 sensors amdgpu-pci-0100 | grep 'power1' | awk '{print $2,$3}'}${alignr 10}${color}Voltage: ${color6}${execi 10 sensors amdgpu-pci-0100 | grep 'vddgfx' | awk '{print $2,$3}'}
 
 ### Old ###
 ${scroll 16 $nodename - $sysname $kernel on $machine | }
