--- a/vostro/.conkyrc
+++ b/vostro/.conkyrc
@@ -114,6 +114,17 @@ ${goto 10}${color1}${top_mem name 2}${alignr 10}${color}${top_mem mem 2}%
 ${goto 10}${color1}${top_mem name 3}${alignr 10}${color}${top_mem mem 3}%
 ${goto 10}${color1}${top_mem name 4}${alignr 10}${color}${top_mem mem 4}%
 ${goto 10}${color1}${top_mem name 5}${alignr 10}${color}${top_mem mem 5}%
+#
+### Network ###
+${color4}${hr}${color}
+${goto 10}${color}Internal IP: ${alignr 10}${color6}${addr wlp2s0}
+${goto 10}${color}External IP: ${alignr 10}${color6}${execi 60 curl ipinfo.io/ip}
+${goto 10}${color}SSID: ${alignr 10}${color6}${wireless_essid wlp2s0}
+${goto 10}${color}Signal: ${goto 70}${wireless_link_bar wlp2s0}
+
+${goto 10}${color}Up: ${color2}${upspeed wlp2s0}${goto 140}${color}Down: ${color2}${downspeed wlp2s0}
+${goto 10}${color}Total: ${color2}${totalup wlp2s0}${goto 140}${color}Total: ${color2}${totaldown wlp2s0}
+${goto 10}${color5}${upspeedgraph wlp2s0 30,110 fc8c3b c6396b -t}${goto 140}${color5}${downspeedgraph wlp2s0 30,110 fc8c3b c6396b -t}
 
 ### Old ###
 ${scroll 16 $nodename - $sysname $kernel on $machine | }
