--- a/vostro/.conkyrc
+++ b/vostro/.conkyrc
@@ -125,6 +125,17 @@ ${goto 10}${color}Signal: ${goto 70}${wireless_link_bar wlp2s0}
 ${goto 10}${color}Up: ${color2}${upspeed wlp2s0}${goto 140}${color}Down: ${color2}${downspeed wlp2s0}
 ${goto 10}${color}Total: ${color2}${totalup wlp2s0}${goto 140}${color}Total: ${color2}${totaldown wlp2s0}
 ${goto 10}${color5}${upspeedgraph wlp2s0 30,110 fc8c3b c6396b -t}${goto 140}${color5}${downspeedgraph wlp2s0 30,110 fc8c3b c6396b -t}
+#
+### Storage ###
+${color4}${hr}${color}
+${goto 10}${color}Device: ${alignr 10}${color6}/dev/nvme0n1
+${goto 10}${color}Temp: ${alignr 10}${color1}${execi 10 sensors nvme-pci-0300 | grep 'Composite' | awk '{print $2}'}
+
+${goto 10}${color}Read: ${color2}${diskio_read /dev/nvme0n1}${goto 140}${color}Write: ${color2}${diskio_write /dev/nvme0n1}
+${goto 10}${color5}${diskiograph_read /dev/nvme0n1 30,110 fc8c3b c6396b -t}${goto 140}${color5}${diskiograph_write /dev/nvme0n1 30,110 fc8c3b c6396b -t}
+
+${goto 10}${color6}/home ${alignr 10}${color2}${fs_used /home}${color} / ${color1}${fs_size /home}
+${goto 10}${color}${fs_bar /home}
 
 ### Old ###
 ${scroll 16 $nodename - $sysname $kernel on $machine | }
