--- a/asus/.conkyrc
+++ b/asus/.conkyrc
@@ -118,6 +118,15 @@ ${goto 10}${color1}${top_mem name 2}${alignr 10}${color}${top_mem mem 2}%
 ${goto 10}${color1}${top_mem name 3}${alignr 10}${color}${top_mem mem 3}%
 ${goto 10}${color1}${top_mem name 4}${alignr 10}${color}${top_mem mem 4}%
 ${goto 10}${color1}${top_mem name 5}${alignr 10}${color}${top_mem mem 5}%
+#
+### Network ###
+${color4}${hr}${color}
+${goto 10}${color}Internal IP: ${alignr 10}${color6}${addr eno1}
+${goto 10}${color}External IP: ${alignr 10}${color6}${execi 60 curl ipinfo.io/ip}
+
+${goto 10}${color}Up: ${color2}${upspeed eno1}${goto 140}${color}Down: ${color2}${downspeed eno1}
+${goto 10}${color}Total: ${color2}${totalup eno1}${goto 140}${color}Total: ${color2}${totaldown eno1}
+${goto 10}${color5}${upspeedgraph eno1 30,110 fc8c3b c6396b -t}${goto 140}${color5}${downspeedgraph eno1 30,110 fc8c3b c6396b -t}
 
 ########## Old ##########
 ${scroll 16 $nodename - $sysname $kernel on $machine | }
