--- a/vostro/.conkyrc
+++ b/vostro/.conkyrc
@@ -39,6 +39,7 @@ conky.config = {
 	default_color = 'white',
     default_outline_color = 'white',
     default_shade_color = 'white',
+    double_buffer = true,
     draw_borders = false,
     draw_graph_borders = true,
     draw_outline = false,
